# charm-neutron-api

./: .gitignore  .gitreview  Makefile  README.md  actions.yaml  charm-helpers-hooks.yaml  charm-helpers-tests.yaml  config.yaml  metadata.yaml  setup.cfg  test-requirements.txt  tox.ini
actions/: git_reinstall.py
hooks/: neutron_api_context.py  neutron_api_hooks.py  neutron_api_utils.py
hooks/charmhelpers/contrib/openstack/: context.py  neutron.py  utils.py
templates/: api-paste.ini
templates/icehouse/: neutron.conf
templates/juno/: neutron.conf
templates/kilo/: api-paste.ini  ml2_conf.ini  neutron.conf
templates/liberty/: neutron.conf
templates/mitaka/: api-paste.ini  ml2_conf.ini  neutron.conf
templates/newton/: api-paste.ini  neutron.conf
templates/ocata/: neutron.conf
templates/parts/: section-designate
templates/pike/: neutron.conf
templates/queens/: neutron.conf
templates/rocky/: api-paste.ini  neutron.conf
tests/: basic_deployment.py  gate-basic-artful-pike
unit_tests/: test_neutron_api_context.py  test_neutron_api_hooks.py  test_neutron_api_utils.py  test_utils.py
